# MineServer

./: .gitignore  README.md  build_log.txt  index.html  package-lock.json  package.json  temp_keys.txt  temp_keys_ascii.txt  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build_log_2.txt  cargo_build_error.txt  cargo_check_clean.txt  cargo_check_fix.txt  cargo_error_4.txt  error_log.txt  error_log_2.txt  error_log_3.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scheduler.rs
src-tauri/src/commands/: backup.rs  downloader.rs  mod.rs  network_manager.rs  plugins.rs  runner.rs  server.rs  server_config.rs  system.rs  versions.rs  world_manager.rs
src-tauri/src/models/: mod.rs
src/components/: ErrorBoundary.tsx
src/components/cards/: QuickActionCard.tsx  RecommendationCard.tsx  ServerCard.tsx  SystemResourceCard.tsx
src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/server/: ConfigManager.tsx  FileManager.tsx  ModManager.tsx  NetworkManager.tsx  PlayerManager.tsx  PluginManager.tsx  PropertiesEditor.tsx  SecurityManager.tsx  ServerConsole.tsx  SettingsManager.tsx  SoftwareManager.tsx  StartupManager.tsx  TabButton.tsx  WorldManager.tsx
src/components/ui/: CodeEditor.tsx
src/hooks/: usePlayerTracking.ts
src/pages/: Backups.tsx  CreateServer.tsx  Dashboard.tsx  Files.tsx  ScheduledTasks.tsx  ServerDetail.tsx  Servers.tsx  Settings.tsx
src/stores/: appStore.ts
